# Timeline

./: Makefile  README.md  pyproject.toml
examples/: simple.json
pytimeline/: __init__.py  __main__.py  structures.py  utils.py
tests/: test_timeline.py
timeline/: __init__.py  structures.py
