[tool.poetry]
name = "timeline"
version = "0.1.0"
description = ""
authors = ["Felix Soubelet <felix.soubelet@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^21.12b0"
pylint = "^2.12.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
